# SafeAppealNavigator

./: .cursorignore  .env.example  .gitignore  A2A_FIX_SUMMARY.md  A2A_IMPLEMENTATION_ANALYSIS.md  AgentFlows-Intake FLow: WCAT Document Intake Flow-1.eraserdiagram  AgentFlows-Legal Document Processing System ERD-6.eraserdiagram  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SettingsPage.tsx  cleanup.bat  cleanup_script.ps1  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run_app.bat  run_app.py  run_app.sh  test_browser_fix.py  test_orchestrator.py  webui.py
Documentation/: ARCHITECTURE.md  DEV_KICKOFF.md  FILE_TREE.md  IDE_Integration_Guide.md  MEMORY_MODEL.md  alldocs.md  update.md
Documentation/AgentFlow/: AgentFlows.md
Documentation/AgentFlow/code/: AgentFlows-Legal Document Processing Flow-4.eraserdiagram
agent_cards/: browser_agent.json  ceo_agent.json  ceo_agent_test.json  data_query_coordinator.json  database_agent.json  document_agent.json  document_processing_coordinator.json  legal_manager_agent.json  legal_research_coordinator.json  orchestrator_agent.json
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  DEV_KICKOFF.md  FILE_TREE.md  HOOKS.md  MEMORY_MODEL.md  PROJECT_STRUCTURE.md  WORKFLOWS.md  a2aproject-a2a-samples-ee9f3b54cf0cb599 (2).txt  alldocs.md  flowchart.mmd
docs/AgentFlow/code/: AgentFlows-Chat Agent Flow-2.eraserdiagram  AgentFlows-External Data Acquisition Process-5.eraserdiagram
frontend/: App.tsx  AppContextHelper.ts  AppContextHelper.tsx  README.md  constants.ts  index.html  index.tsx  mcp.json  mcp_api_configs.json  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: Header.tsx  Sidebar.tsx
frontend/components/modals/: AiOrganizationReviewModal.tsx
frontend/components/pages/: ChatAgentPanelPage.tsx  DashboardPage.tsx  DocumentViewerPage.tsx  ExportCenterPage.tsx  FileIngestionPage.tsx  SearchPage.tsx  Settings.tsx  SettingsPage.tsx  SideBySideViewerPage.tsx  TagExplorerPage.tsx
frontend/components/ui/: ChatContextSidebar.tsx  ChatPopupModal.tsx  LoadingSpinner.tsx  Modal.tsx  ToggleSwitch.tsx
frontend/contexts/: AppContext.tsx  AppContextHelper.ts
frontend/services/: AGUIClient.ts  AgUiAgentService.ts  McpClient.ts  geminiService.ts  wcatService.ts
frontend/src/components/: Chat.tsx
frontend/src/hooks/: useAGUI.ts
frontend/src/services/: AGUIClient.ts
scripts/mover/: move.json  move.py
src/ai_research_assistant/: README.md
src/ai_research_assistant/a2a_services/: __init__.py  a2a_compatibility.py  enhanced_a2a_wrapper.py  fasta2a_wrapper.py  startup.py
src/ai_research_assistant/ag_ui_backend/: __init__.py  a2a_client.py  main.py  router.py  state_manager.py
src/ai_research_assistant/agents/: __init__.py  base_agent.py  base_pydantic_agent.py  base_pydantic_agent_config.py
src/ai_research_assistant/browser/: custom_browser.py
src/ai_research_assistant/config/: __init__.py  agent_mcp_mapping.json  development.json  global_settings.py  mcp_client_config.py  mcp_config.py  mcp_servers.json
src/ai_research_assistant/controller/: custom_controller.py
src/ai_research_assistant/core/: config.py  env_manager.py  llm_provider.py  mcp_client.py  models.py  rate_limiter.py  resource_manager.py  state_manager.py  unified_llm_factory.py
src/ai_research_assistant/interface/: __init__.py  cli.py
src/ai_research_assistant/mcp/: __init__.py  client.py  connection.py  hub.py  manager.py  server.py
src/ai_research_assistant/mcp_intergration/: README.md  __init__.py  agent_integration.py  agent_registry.py  client.py  mcp_client_manager.py  server_main.py  (+2 more)
tests/: __init__.py  debug_intake_path.py  test_a2a_startup.py  test_ag_ui_a2a_client.py  test_ag_ui_main.py  test_ag_ui_router.py  test_ag_ui_state_manager.py  test_agent.py  test_agent_cards_validation.py  test_agents.py  test_base_pydantic_agent.py  test_base_pydantic_agent_config.py  test_browser_agent.py  test_ceo_agent.py  test_ceo_agent_tools.py  test_controller.py  test_core_config.py  test_core_env_manager.py  test_core_llm_provider.py  test_core_models.py  test_core_path_utils.py  test_core_rate_limiter.py  test_core_resource_manager.py  test_core_state_manager.py  test_core_unified_llm_factory.py  test_critical_fixes.py  test_database_agent.py  test_document_agent.py  test_fasta2a_wrapper.py  test_fixes.py  test_google_config.py  test_google_migration.py  test_google_models.py  test_legal_import.py  test_legal_manager_agent.py  test_legal_research.py  test_orchestrator_agent.py  test_prompts.py  test_specialized_agents.py  test_tool_count.py  (+1 more)
tests/mcp_servers/: echo_server.py
(+143 files in other folders)
