[project]
authors = [
    { name = "SavagelySubtle", email = "your-email@example.com" },
]
dependencies = [
    "ag-ui-protocol @ git+https://github.com/ag-ui-protocol/ag-ui.git#subdirectory=python-sdk",
    "aiofiles>=0.8.0",
    "aiohappyeyeballs>=2.5.0",
    "aiosqlite>=0.21.0",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "browser-use~=0.2.6",
    "fasta2a>=0.1.0",
    "gradio==5.27.0",
    "httpx>=0.28.1",
    "json-repair>=0.46.0",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-ibm==0.3.10",
    "langchain-mcp-adapters==0.1.1",
    "langchain-mistralai==0.2.4",
    "langgraph==0.3.34",
    "maincontentextractor==0.0.4",
    "mcp>=0.1.0",
    "nest-asyncio>=1.6.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pydantic-ai~=0.2.17",
    "pydantic>=2.11.2",
    "pypdf>=4.3.1",
    "pypdf2>=3.0.1",
    "pyperclip==1.9.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "chroma-mcp>=0.2.5",
]
description = "Enhanced AI Research Assistant with advanced legal research capabilities, multi-LLM support, and intelligent document generation"
license = { text = "Apache-2.0" }
name = "ai-research-assistant"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

    [project.optional-dependencies]
    all = [
        "ai-research-assistant[dev]",
    ]
    dev = [
        "ty<=0.0.1a6",
        "ruff",
        "pytest",
        "pytest-asyncio",
        "pytest-mock",
        "pytest-cov",
        "pytest-timeout",
        "pytest-mock",
        "pytest-cov",
    ]

[build-system]
build-backend = "uv_build"
requires      = [ "uv-build>=0.6.0,<0.7" ]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
asyncio_mode = "auto"
python_classes = [ "Test*" ]
python_files = [ "test_*.py", "*_test.py" ]
python_functions = [ "test_*" ]
testpaths = [ "tests", "." ]

[tool.ruff]
exclude     = [ "**/node_modules", ".venv", "__pycache__" ]
line-length = 88

[tool.ty.src]
root = "./src"

[tool.uv.sources]
src = { path = "./src" }
